publish: set files to publish

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node bin/qr-forge.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
+  "files": ["bin", "lib"],
   "keywords": [
     "qr",
     "qrcode",
